--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
   <body>
     <div class="search-container">
-        <h1 class="heading">Voice/Audio to text Engine</h1>
+        <h1 class="heading">Voice/Audio to text Engine </h1>
         <div class="dialogue">
 
         </div>
         <div class="action-btns">
             <button id="recordButton" class="buttonCenter"><span class="material-symbols-outlined">
-                mic
+                microphone
                 </span></button>
             <button id="viewWords"><span class="material-symbols-outlined">
                 chat_apps_script
