--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="action-btns">
             <button id="recordButton" class="buttonCenter"><span class="material-symbols-outlined">
-                microphone
+                mic
                 </span></button>
             <button id="viewWords"><span class="material-symbols-outlined">
                 chat_apps_script
